# Git_MG

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  First_File.py  LICENSE  README.md
.claude/: settings.local.json
.github/workflows/: deploy-dev.yml  deploy-prod.yml  deploy-staging.yml  deploy-test.yml  pr-validation.yml
config/: data-generation-config.json
design/: color-palette.json
design/backgrounds/: powerbi-theme.json
docs/architecture/: DESIGN_DECISIONS.md
docs/automation/: GITHUB_ACTIONS_GUIDE.md
docs/client-deliverables/: IMPLEMENTATION_GUIDE.md
docs/data/: DATA_DICTIONARY.md
docs/deployment/: DEPLOYMENT_GUIDE.md
docs/design/: DESIGN_GUIDE.md
docs/development/: FEATURE_WORKFLOW.md
docs/getting-started/: ENVIRONMENT_SETUP.md  FIRST_TIME_GUIDE.md  QUICKSTART.md
docs/governance/: CHANGE_CONTROL.md
docs/operations/: RUNBOOK.md
python-utilities/: README.md  pyproject.toml  requirements.txt  setup.py
python-utilities/scripts/: generate-data.py  run-all-checks.py  validate-model.py
python-utilities/src/: __init__.py
python-utilities/src/data_pipeline/: __init__.py  generate_sample_data.py  quality_checker.py
python-utilities/src/deployers/: __init__.py
python-utilities/src/git_helpers/: __init__.py
python-utilities/src/tabular_editor/: __init__.py
python-utilities/src/utils/: __init__.py
python-utilities/src/validators/: __init__.py  best_practices_checker.py  dax_validator.py  naming_conventions.json  tmdl_validator.py
python-utilities/tests/: __init__.py  test_dax_validator.py  test_tmdl_validator.py
(+32 files in other folders)
