[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "powerbi-utilities"
version = "1.0.0"
description = "Professional automation toolkit for Power BI semantic models"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Michal Glanowski", email = "michal@example.com"}
]

[project.urls]
Homepage = "https://github.com/MichalG-tech/Git_MG"
Repository = "https://github.com/MichalG-tech/Git_MG.git"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src"
